@@ -62,3 +62,5 @@ AMNESIA = -1
 # SYSLOGONLY: Write log entries to syslog instead of log file. All Logging
 # Options are respected. Good for centralized logging.
 SYSLOGONLY = 0
+
+# EOF
